# Eric4K

./: .gitignore  build.gradle
app/: build.gradle
app/src/androidTest/java/com/eric/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/eric/: MyFfmpeg.cpp  MyFfmpeg.h
app/src/main/cpp/util/: GLUtils.h  LogUtil.h  MySyncLock.h  myLogger.h
app/src/main/java/com/eric/: JniHelper.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/eric/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
